<resources>
    <string name="app_name">On Campus</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_select_school">SelectSchool</string>
    <string name="plymouth">Plymouth State University</string>
    <string name="keene">Keene State College</string>
    <string name="une">University of New England</string>
    <string name="dartmouth">Dartmouth College</string>
    <string name="snhu">Southern New Hampshire University</string>
    <string name="granite">Granite State College</string>
    <string name="nhti">New Hampshire Institute of Technology</string>
    <string name="lrcc">Lakes Region Community College</string>
    <string name="unh">University of New Hampshire</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="StudentSign">Sign-In With\nStudent ID</string>
    <string name="OrgSign">Sign-In With\nOrg ID</string>
    <string name="signMessage">Events by PACE,\nPAW, MAPS &amp; More!</string>
    <string name="title_activity_agenda">Upcoming Events</string>
    <string name="upcoming">Upcoming Events</string>
    <string name="calendar">Calendar</string>
    <string name="checkin">Check-In</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_scratch">scratch</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="invalid_email">This email address is invalid</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="field_required">This field is required</string>

    <!--Event Card placeholders and headers-->
    <string name="head_location">Location</string>
    <string name="head_date">Date</string>
    <string name="head_attend">ARE YOU ATTENDING?</string>
    <string name="head_desc">Description</string>

    <string name="place_location">HUB Courtroom</string>
    <string name="place_date">Wed, Mar 5, 5:45 PM</string>
    <string name="button_yes">YES</string>
    <string name="button_maybe">MAYBE</string>
    <string name="place_desc">Bacon ipsum dolor amet pastrami sausage landjaeger short loin, pork belly kielbasa boudin chuck rump ham venison tri-tip shoulder kevin pig.</string>
    <string name="head_org">Sponsored By</string>
    <string name="place_org">PACE</string>
    <string name="place_name">Great Escape: Boston</string>
    <string name="context">banner</string>
</resources>
