<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/upcoming"
            android:checked="false"
            android:icon="@drawable/ic_action_home"
            android:title="@string/upcoming" />

        <item
            android:id="@+id/calendar"
            android:checked="false"
            android:icon="@drawable/ic_action_calendar"
            android:title="@string/calendar" />

        <item
            android:id="@+id/checkin"
            android:checked="false"
            android:icon="@drawable/ic_action_checkin"
            android:title="@string/checkin" />

        <item
            android:id="@+id/settings"
            android:checked="false"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/action_settings" />

    </group>
</menu>