<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_margin"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:id="@+id/cardEvent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        style="@style/Widget.CardContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp">

        <ImageView
            android:layout_height="100dp"
            android:layout_width="match_parent"
            android:id="@+id/listImage"
            android:src="@drawable/place"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/context" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/listImage">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:id="@+id/cardInfo"
                    android:layout_marginBottom="0dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/place_date"
                        android:id="@+id/listDate"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/listName"
                        android:text="@string/place_name"
                        android:layout_below="@+id/listDate"
                        android:textSize="24sp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/listLocation"
                        android:text="@string/place_location"
                        android:layout_below="@+id/listName"
                        />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignEnd="@+id/cardInfo"
                    android:paddingTop="8dp"
                    android:padding="8dp">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBox"
                        android:button="@drawable/checkstar"
                        android:buttonTint="#888888" />

                    <ImageView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:id="@+id/cardClock"
                        android:src="@drawable/ic_access_time_24dp"
                        android:tint="#888888"
                        android:layout_toRightOf="@id/checkBox"
                        android:layout_marginLeft="12dp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cardMenu"
                        android:src="@drawable/ic_more_vert_24dp"
                        android:tint="#888888"
                        android:layout_toRightOf="@id/cardClock" />
                </RelativeLayout>


            </RelativeLayout>

        </RelativeLayout>


    </RelativeLayout>

</android.support.v7.widget.CardView>