<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dividerColor"
    tools:context="com.devon_dickson.apps.orgspace.EventDetailsActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/hero_image_height"
                android:id="@+id/layoutHero">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imgHero"
                    android:foreground="@drawable/shape_scrim"
                    android:layout_alignParentBottom="true"
                    android:layout_alignEnd="@+id/checkHero"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="MOCKINGJAY Pt 2 Premiere"
                    android:id="@+id/textHero"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:textColor="#ffffff"
                    android:background="@drawable/shape_scrim"

                    android:padding="10dp"
                    android:layout_alignParentEnd="true" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkHero"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:button="@drawable/checkstar"
                    android:layout_alignParentStart="false"
                    android:checked="false"
                    android:enabled="false"
                    android:paddingRight="10dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/layoutGlance"
                android:layout_below="@+id/layoutHero"
                android:layout_alignParentStart="true">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/layoutLocDate"
                    android:baselineAligned="false">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/layoutLocation"
                        android:background="@drawable/border"
                        android:layout_weight="0.71"
                        android:padding="5dp">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:id="@+id/relativeLayout2">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:id="@+id/imageLocation"
                                android:src="@drawable/ic_map_marker_black_48dp"
                                android:layout_alignParentTop="true"
                                android:layout_alignParentStart="true" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/head_location"
                                android:id="@+id/headerLocation"
                                android:textStyle="bold"
                                android:layout_alignParentStart="false"
                                android:layout_toEndOf="@id/imageLocation"
                                android:layout_alignParentBottom="false"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="5dp" />

                        </RelativeLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/place_location"
                            android:id="@+id/textLocation"
                            android:layout_alignParentStart="false"
                            android:layout_below="@+id/relativeLayout2" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/layoutDate"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:padding="5dp">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/heading">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:id="@+id/imageDate"
                                android:src="@drawable/ic_clock_black_48dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/head_date"
                                android:id="@+id/headerDate"
                                android:layout_toEndOf="@id/imageDate"
                                android:layout_centerVertical="true"
                                android:textStyle="bold"
                                android:layout_marginLeft="5dp" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/place_date"
                            android:id="@+id/textDate"
                            android:layout_alignParentStart="false"
                            android:layout_alignParentEnd="false"
                            android:layout_alignParentBottom="false"
                            android:layout_below="@+id/heading" />

                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/layoutAttending"
                    android:layout_below="@+id/layoutLocDate"
                    android:background="@drawable/border"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/head_attend"
                        android:id="@+id/headerAttending"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/layoutButtons"
                        android:baselineAligned="false"
                        android:weightSum="1">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/button_yes"
                            android:id="@+id/buttonYes"
                            android:layout_weight="1"
                            android:textColor="@android:color/holo_blue_dark"
                            android:textStyle="bold"
                            style="?android:attr/borderlessButtonStyle"/>

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/button_maybe"
                            android:id="@+id/buttonMaybe"
                            android:layout_weight="1"
                            android:textStyle="bold"
                            android:textColor="@android:color/holo_blue_dark"
                            style="?android:attr/borderlessButtonStyle"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/layoutDescription">

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_desc"
        android:id="@+id/textView"
        android:background="@drawable/border"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

</LinearLayout>