<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/tan"
    tools:context="com.devon_dickson.apps.orgspace.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/panther"
        android:baselineAlignBottom="false"
        android:clickable="false"
        android:adjustViewBounds="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/signMessage"
        android:id="@+id/textView3"
        android:layout_alignTop="@+id/relativeLayout"
        android:layout_centerHorizontal="true"
        android:phoneNumber="false" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout"
        android:layout_below="@+id/imageView2">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/StudentSign"
            android:id="@+id/SignStudent"
            android:textStyle="bold"
            android:background="@color/green"
            android:textColor="@color/white"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:typeface="sans" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OrgSign"
            android:id="@+id/SignOrg"
            android:textStyle="bold"
            android:background="@color/green"
            android:textColor="@color/white"
            android:paddingLeft="50dp"
            android:paddingTop="10dp"
            android:paddingRight="50dp"
            android:paddingBottom="10dp"
            android:layout_below="@+id/strike"
            android:layout_alignRight="@+id/SignStudent"
            android:layout_alignEnd="@+id/SignStudent" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#8c000000"
            android:layout_alignBottom="@+id/textView"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:baselineAlignBottom="false"
            android:layout_alignParentBottom="false"
            android:layout_alignParentTop="false"
            android:layout_alignWithParentIfMissing="false"
            android:id="@+id/strike"
            android:layout_alignRight="@+id/SignOrg"
            android:layout_alignLeft="@+id/SignOrg"
            android:layout_alignEnd="@+id/SignOrg"
            android:layout_alignParentEnd="false"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="OR"
            android:id="@+id/textView"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:autoText="false"
            android:background="#ffddc593"
            android:layout_below="@+id/SignStudent"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp" />

    </RelativeLayout>

</RelativeLayout>
